syntax = "proto3";

package prism.config.v1;

option go_package = "github.com/carlossalguero/prism/api/proto/gen/config";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// =============================================================================
// Config Service - Manages gateway routing and configuration
// =============================================================================

service ConfigService {
  // Route management
  rpc CreateRoute(CreateRouteRequest) returns (Route);
  rpc GetRoute(GetRouteRequest) returns (Route);
  rpc UpdateRoute(UpdateRouteRequest) returns (Route);
  rpc DeleteRoute(DeleteRouteRequest) returns (google.protobuf.Empty);
  rpc ListRoutes(ListRoutesRequest) returns (ListRoutesResponse);

  // Upstream management
  rpc RegisterUpstream(RegisterUpstreamRequest) returns (Upstream);
  rpc DeregisterUpstream(DeregisterUpstreamRequest) returns (google.protobuf.Empty);
  rpc ListUpstreams(ListUpstreamsRequest) returns (ListUpstreamsResponse);
  rpc GetUpstreamHealth(GetUpstreamHealthRequest) returns (UpstreamHealth);

  // Rate limit rules
  rpc CreateRateLimitRule(CreateRateLimitRuleRequest) returns (RateLimitRule);
  rpc UpdateRateLimitRule(UpdateRateLimitRuleRequest) returns (RateLimitRule);
  rpc DeleteRateLimitRule(DeleteRateLimitRuleRequest) returns (google.protobuf.Empty);
  rpc ListRateLimitRules(ListRateLimitRulesRequest) returns (ListRateLimitRulesResponse);

  // Configuration watch
  rpc WatchConfig(WatchConfigRequest) returns (stream ConfigUpdate);
}

// =============================================================================
// Route configuration
// =============================================================================

message Route {
  string id = 1;
  string name = 2;

  // Matching criteria
  repeated string hosts = 3;          // Host headers to match
  repeated string paths = 4;          // Path prefixes to match
  repeated string methods = 5;        // HTTP methods (GET, POST, etc.)
  map<string, string> headers = 6;    // Headers to match

  // Target configuration
  string upstream_id = 7;
  bool strip_path = 8;                // Strip matched path prefix
  string path_rewrite = 9;            // Rewrite path pattern

  // Middleware configuration
  RouteMiddleware middleware = 10;

  // Metadata
  int32 priority = 11;                // Higher priority routes match first
  bool enabled = 12;
  map<string, string> metadata = 13;

  google.protobuf.Timestamp created_at = 14;
  google.protobuf.Timestamp updated_at = 15;
}

message RouteMiddleware {
  bool auth_required = 1;
  repeated string required_roles = 2;
  repeated string required_scopes = 3;
  string rate_limit_rule_id = 4;
  bool cors_enabled = 5;
  CORSConfig cors_config = 6;
  int32 timeout_ms = 7;
  int32 retries = 8;
}

message CORSConfig {
  repeated string allowed_origins = 1;
  repeated string allowed_methods = 2;
  repeated string allowed_headers = 3;
  repeated string exposed_headers = 4;
  bool allow_credentials = 5;
  int32 max_age = 6;
}

// =============================================================================
// Upstream configuration
// =============================================================================

message Upstream {
  string id = 1;
  string name = 2;
  repeated Target targets = 3;
  LoadBalancerConfig load_balancer = 4;
  HealthCheckConfig health_check = 5;
  CircuitBreakerConfig circuit_breaker = 6;

  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message Target {
  string id = 1;
  string host = 2;
  int32 port = 3;
  int32 weight = 4;           // For weighted load balancing
  bool healthy = 5;
  map<string, string> metadata = 6;
}

enum LoadBalancerAlgorithm {
  LOAD_BALANCER_ALGORITHM_UNSPECIFIED = 0;
  LOAD_BALANCER_ALGORITHM_ROUND_ROBIN = 1;
  LOAD_BALANCER_ALGORITHM_LEAST_CONNECTIONS = 2;
  LOAD_BALANCER_ALGORITHM_RANDOM = 3;
  LOAD_BALANCER_ALGORITHM_WEIGHTED = 4;
  LOAD_BALANCER_ALGORITHM_IP_HASH = 5;
}

message LoadBalancerConfig {
  LoadBalancerAlgorithm algorithm = 1;
}

message HealthCheckConfig {
  bool enabled = 1;
  string path = 2;              // Health check endpoint path
  int32 interval_seconds = 3;
  int32 timeout_seconds = 4;
  int32 healthy_threshold = 5;
  int32 unhealthy_threshold = 6;
}

message CircuitBreakerConfig {
  bool enabled = 1;
  int32 failure_threshold = 2;
  int32 success_threshold = 3;
  int32 timeout_seconds = 4;
}

message UpstreamHealth {
  string upstream_id = 1;
  repeated TargetHealth targets = 2;
}

message TargetHealth {
  string target_id = 1;
  bool healthy = 2;
  string last_error = 3;
  google.protobuf.Timestamp last_check = 4;
}

// =============================================================================
// Rate limiting
// =============================================================================

message RateLimitRule {
  string id = 1;
  string name = 2;

  RateLimitStrategy strategy = 3;
  int64 requests_per_second = 4;
  int64 burst_size = 5;

  // Scope: how to identify clients for rate limiting
  RateLimitScope scope = 6;

  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

enum RateLimitStrategy {
  RATE_LIMIT_STRATEGY_UNSPECIFIED = 0;
  RATE_LIMIT_STRATEGY_TOKEN_BUCKET = 1;
  RATE_LIMIT_STRATEGY_SLIDING_WINDOW = 2;
  RATE_LIMIT_STRATEGY_FIXED_WINDOW = 3;
}

enum RateLimitScope {
  RATE_LIMIT_SCOPE_UNSPECIFIED = 0;
  RATE_LIMIT_SCOPE_GLOBAL = 1;
  RATE_LIMIT_SCOPE_IP = 2;
  RATE_LIMIT_SCOPE_USER = 3;
  RATE_LIMIT_SCOPE_API_KEY = 4;
}

// =============================================================================
// Request/Response messages
// =============================================================================

// Routes
message CreateRouteRequest {
  Route route = 1;
}

message GetRouteRequest {
  string id = 1;
}

message UpdateRouteRequest {
  Route route = 1;
}

message DeleteRouteRequest {
  string id = 1;
}

message ListRoutesRequest {
  int32 page = 1;
  int32 page_size = 2;
  bool enabled_only = 3;
}

message ListRoutesResponse {
  repeated Route routes = 1;
  int32 total = 2;
}

// Upstreams
message RegisterUpstreamRequest {
  Upstream upstream = 1;
}

message DeregisterUpstreamRequest {
  string id = 1;
}

message ListUpstreamsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListUpstreamsResponse {
  repeated Upstream upstreams = 1;
  int32 total = 2;
}

message GetUpstreamHealthRequest {
  string id = 1;
}

// Rate limits
message CreateRateLimitRuleRequest {
  RateLimitRule rule = 1;
}

message UpdateRateLimitRuleRequest {
  RateLimitRule rule = 1;
}

message DeleteRateLimitRuleRequest {
  string id = 1;
}

message ListRateLimitRulesRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListRateLimitRulesResponse {
  repeated RateLimitRule rules = 1;
  int32 total = 2;
}

// Configuration watch
message WatchConfigRequest {
  // Types of configuration changes to watch
  bool watch_routes = 1;
  bool watch_upstreams = 2;
  bool watch_rate_limits = 3;
}

message ConfigUpdate {
  ConfigUpdateType type = 1;
  oneof update {
    Route route = 2;
    Upstream upstream = 3;
    RateLimitRule rate_limit_rule = 4;
  }
}

enum ConfigUpdateType {
  CONFIG_UPDATE_TYPE_UNSPECIFIED = 0;
  CONFIG_UPDATE_TYPE_CREATED = 1;
  CONFIG_UPDATE_TYPE_UPDATED = 2;
  CONFIG_UPDATE_TYPE_DELETED = 3;
}
