syntax = "proto3";

package prism.auth.v1;

option go_package = "github.com/carlossalguero/prism/services/shared/proto/gen;proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// =============================================================================
// Auth Service - Handles authentication and authorization
// =============================================================================

service AuthService {
  // Token operations
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (TokenPair);
  rpc RevokeToken(RevokeTokenRequest) returns (google.protobuf.Empty);

  // User authentication
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (google.protobuf.Empty);
  rpc Register(RegisterRequest) returns (RegisterResponse);

  // OAuth operations
  rpc GetOAuthURL(GetOAuthURLRequest) returns (GetOAuthURLResponse);
  rpc HandleOAuthCallback(OAuthCallbackRequest) returns (LoginResponse);

  // API Key operations
  rpc CreateAPIKey(CreateAPIKeyRequest) returns (CreateAPIKeyResponse);
  rpc ValidateAPIKey(ValidateAPIKeyRequest) returns (ValidateAPIKeyResponse);
  rpc RevokeAPIKey(RevokeAPIKeyRequest) returns (google.protobuf.Empty);
  rpc ListAPIKeys(ListAPIKeysRequest) returns (ListAPIKeysResponse);

  // User management
  rpc GetUser(GetUserRequest) returns (User);
  rpc UpdateUser(UpdateUserRequest) returns (User);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}

// =============================================================================
// Common types
// =============================================================================

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string picture = 4;
  repeated string roles = 5;
  bool email_verified = 6;
  string provider = 7;  // local, google, github
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message TokenPair {
  string access_token = 1;
  string refresh_token = 2;
  int64 access_token_expires_at = 3;  // Unix timestamp
  int64 refresh_token_expires_at = 4; // Unix timestamp
  string token_type = 5;              // Bearer
}

message TokenClaims {
  string user_id = 1;
  string email = 2;
  repeated string roles = 3;
  string session_id = 4;
  int64 issued_at = 5;
  int64 expires_at = 6;
}

message APIKey {
  string id = 1;
  string name = 2;
  string prefix = 3;           // First 8 chars for identification
  string user_id = 4;
  repeated string scopes = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp expires_at = 7;
  google.protobuf.Timestamp last_used_at = 8;
}

// =============================================================================
// Token validation
// =============================================================================

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  TokenClaims claims = 2;
  string error = 3;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RevokeTokenRequest {
  string token = 1;
  bool revoke_all_sessions = 2;
}

// =============================================================================
// User authentication
// =============================================================================

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  TokenPair tokens = 2;
}

message LogoutRequest {
  string refresh_token = 1;
  bool logout_all_sessions = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message RegisterResponse {
  User user = 1;
  TokenPair tokens = 2;
}

// =============================================================================
// OAuth operations
// =============================================================================

enum OAuthProvider {
  OAUTH_PROVIDER_UNSPECIFIED = 0;
  OAUTH_PROVIDER_GOOGLE = 1;
  OAUTH_PROVIDER_GITHUB = 2;
}

message GetOAuthURLRequest {
  OAuthProvider provider = 1;
  string redirect_uri = 2;    // Where to redirect after OAuth flow
  string state = 3;           // CSRF protection state
}

message GetOAuthURLResponse {
  string url = 1;
  string state = 2;
}

message OAuthCallbackRequest {
  OAuthProvider provider = 1;
  string code = 2;
  string state = 3;
}

// =============================================================================
// API Key operations
// =============================================================================

message CreateAPIKeyRequest {
  string name = 1;
  repeated string scopes = 2;
  int64 expires_in_days = 3;   // 0 means no expiration
}

message CreateAPIKeyResponse {
  APIKey api_key = 1;
  string key = 2;              // Full key, only returned once
}

message ValidateAPIKeyRequest {
  string key = 1;
}

message ValidateAPIKeyResponse {
  bool valid = 1;
  APIKey api_key = 2;
  string error = 3;
}

message RevokeAPIKeyRequest {
  string id = 1;
}

message ListAPIKeysRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListAPIKeysResponse {
  repeated APIKey api_keys = 1;
  int32 total = 2;
}

// =============================================================================
// User management
// =============================================================================

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  optional string name = 2;
  optional string picture = 3;
}

message DeleteUserRequest {
  string id = 1;
}
